Use String.format instead of formatted()